# UVAtlas

./: .gitignore  CMakeLists.txt  README.md
UVAtlas/: CMakeLists.txt  pch.h
UVAtlas/inc/: UVAtlas.h
UVAtlas/isochart/: isochartengine.cpp  isochartengine.h  isochartmesh.h  meshapplyisomap.cpp  meshpartitionchart.cpp
UVAtlasTool/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshPLY.cpp  UVAtlas.cpp  UVAtlasTool_2017.vcxproj  UVAtlasTool_2017.vcxproj.filters
